--- a/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
+++ b/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
@@ -26,6 +26,34 @@
                                     <outletCollection property="gestureRecognizers" destination="JfO-Bm-qra" appends="YES" id="Nph-Qu-UhQ"/>
                                 </connections>
                             </mapView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bVb-Jm-KUk">
+                                <rect key="frame" x="457" y="560" width="103" height="20"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zpx-Z9-Jeq">
+                                        <rect key="frame" x="28" y="0.0" width="75" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="IfL-AP-CfK">
+                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="YQF-fJ-Chq"/>
+                                        </constraints>
+                                        <color key="color" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Zpx-Z9-Jeq" firstAttribute="top" secondItem="bVb-Jm-KUk" secondAttribute="top" id="65M-dZ-HyZ"/>
+                                    <constraint firstItem="IfL-AP-CfK" firstAttribute="leading" secondItem="bVb-Jm-KUk" secondAttribute="leading" id="Fo4-fv-2p5"/>
+                                    <constraint firstItem="Zpx-Z9-Jeq" firstAttribute="leading" secondItem="IfL-AP-CfK" secondAttribute="trailing" constant="8" id="KOI-Ng-dPF"/>
+                                    <constraint firstAttribute="bottom" secondItem="Zpx-Z9-Jeq" secondAttribute="bottom" id="Kp4-OF-H3J"/>
+                                    <constraint firstAttribute="bottom" secondItem="IfL-AP-CfK" secondAttribute="bottom" id="nmN-Kg-0Ea"/>
+                                    <constraint firstItem="IfL-AP-CfK" firstAttribute="top" secondItem="bVb-Jm-KUk" secondAttribute="top" id="zVm-xY-dbI"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zpx-Z9-Jeq" secondAttribute="trailing" id="zxR-Wf-dsa"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="37V-ku-ODQ">
                                 <rect key="frame" x="20" y="72" width="560" height="134"/>
                                 <subviews>
@@ -308,7 +336,7 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lGu-UY-rpK">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lGu-UY-rpK">
                                                     <rect key="frame" x="8" y="24.5" width="171" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -447,8 +475,10 @@
                             <constraint firstItem="zfM-Xw-6w1" firstAttribute="leading" secondItem="74f-zj-sek" secondAttribute="leading" id="aIN-e6-wW9"/>
                             <constraint firstItem="EcZ-Kj-xzb" firstAttribute="top" secondItem="64R-U6-acf" secondAttribute="bottom" constant="20" id="bWS-65-Uxl"/>
                             <constraint firstItem="64R-U6-acf" firstAttribute="leading" secondItem="74f-zj-sek" secondAttribute="leading" id="bYo-Xf-TKW"/>
+                            <constraint firstItem="EcZ-Kj-xzb" firstAttribute="top" secondItem="bVb-Jm-KUk" secondAttribute="bottom" constant="20" id="ba6-mi-aGk"/>
                             <constraint firstAttribute="trailing" secondItem="nEN-Yc-ckc" secondAttribute="trailing" id="cvr-jp-0PY"/>
                             <constraint firstItem="nEN-Yc-ckc" firstAttribute="top" secondItem="2XB-0q-QOj" secondAttribute="bottom" id="e5U-fH-ez1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bVb-Jm-KUk" secondAttribute="trailing" constant="20" id="fpt-Ac-Y86"/>
                             <constraint firstItem="37V-ku-ODQ" firstAttribute="top" secondItem="2XB-0q-QOj" secondAttribute="bottom" constant="8" id="iTE-7t-dXl"/>
                             <constraint firstAttribute="trailing" secondItem="64R-U6-acf" secondAttribute="trailing" id="pVx-Ax-SUA"/>
                             <constraint firstItem="37V-ku-ODQ" firstAttribute="leading" secondItem="74f-zj-sek" secondAttribute="leading" constant="20" id="rzZ-Xn-oDh"/>
@@ -466,6 +496,7 @@
                         <outlet property="closeButton" destination="Pda-yU-gs7" id="gA0-HY-75m"/>
                         <outlet property="collapsedSearchBar" destination="k6h-I3-1nd" id="eZI-Zy-oel"/>
                         <outlet property="datePickerView" destination="zfM-Xw-6w1" id="WIY-kY-Gk0"/>
+                        <outlet property="loadingView" destination="bVb-Jm-KUk" id="THD-v1-63L"/>
                         <outlet property="mapView" destination="nEN-Yc-ckc" id="6bX-7F-2O6"/>
                         <outlet property="predictionTableView" destination="k7g-kF-iqV" id="TSz-4Y-HDE"/>
                         <outlet property="reservationContainerView" destination="37V-ku-ODQ" id="u5t-sw-uVG"/>
@@ -520,10 +551,10 @@
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="reservationInfoCell" rowHeight="60" id="XFy-AB-cG3" customClass="ReservationInfoTableViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="49.5" width="600" height="60"/>
+                                        <rect key="frame" x="0.0" y="50" width="600" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="XFy-AB-cG3" id="afe-AS-BCS">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EnR-Cz-Rin">
@@ -575,7 +606,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="personalInfoCell" rowHeight="50" id="yHh-3E-J0x" customClass="PersonalInfoTableViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="109.5" width="600" height="50"/>
+                                        <rect key="frame" x="0.0" y="110" width="600" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="yHh-3E-J0x" id="UXm-Fc-DTh">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
@@ -620,7 +651,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="paymentInfoCell" rowHeight="150" id="HL8-1Q-tXC" customClass="PaymentInfoTableViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="159.5" width="600" height="150"/>
+                                        <rect key="frame" x="0.0" y="160" width="600" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="HL8-1Q-tXC" id="7GP-Dw-1MG">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="149"/>
