--- a/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
+++ b/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
@@ -303,13 +303,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uoX-5v-crH">
-                                                    <rect key="frame" x="8" y="8" width="171" height="17"/>
+                                                    <rect key="frame" x="8" y="8" width="96" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lGu-UY-rpK">
-                                                    <rect key="frame" x="8" y="24.5" width="171" height="17"/>
+                                                    <rect key="frame" x="8" y="25" width="96" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -335,11 +335,21 @@
                                                         <action selector="didTapBuyButton:" destination="pFA-jL-zmI" eventType="touchUpInside" id="t8b-D3-tGi"/>
                                                     </connections>
                                                 </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Noreentry" translatesAutoresizingMaskIntoConstraints="NO" id="2Rw-uh-awg">
+                                                    <rect key="frame" x="112" y="8" width="71" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="6db-BW-kYH"/>
+                                                        <constraint firstAttribute="width" constant="71" id="Qho-9a-S0g"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
+                                            <constraint firstItem="lYi-oY-Q5A" firstAttribute="leading" secondItem="2Rw-uh-awg" secondAttribute="trailing" constant="4" id="06R-QT-NvG"/>
                                             <constraint firstItem="lYi-oY-Q5A" firstAttribute="leading" secondItem="uoX-5v-crH" secondAttribute="trailing" constant="8" id="2Em-xI-brz"/>
+                                            <constraint firstItem="2Rw-uh-awg" firstAttribute="top" secondItem="pFA-jL-zmI" secondAttribute="topMargin" id="7Bi-iO-Zb4"/>
+                                            <constraint firstItem="2Rw-uh-awg" firstAttribute="leading" secondItem="uoX-5v-crH" secondAttribute="trailing" constant="8" id="DAQ-yu-tPn"/>
                                             <constraint firstAttribute="trailing" secondItem="3jD-ib-d5I" secondAttribute="trailing" id="GQk-ll-mo9"/>
                                             <constraint firstItem="uoX-5v-crH" firstAttribute="top" secondItem="pFA-jL-zmI" secondAttribute="top" constant="8" id="Gpw-5w-YSe"/>
                                             <constraint firstItem="lGu-UY-rpK" firstAttribute="height" secondItem="uoX-5v-crH" secondAttribute="height" id="LC5-H7-fFl"/>
@@ -348,15 +358,23 @@
                                             <constraint firstItem="3jD-ib-d5I" firstAttribute="top" relation="greaterThanOrEqual" secondItem="lGu-UY-rpK" secondAttribute="bottom" constant="8" id="ZYQ-Ne-Y41"/>
                                             <constraint firstItem="uoX-5v-crH" firstAttribute="leading" secondItem="pFA-jL-zmI" secondAttribute="leading" constant="8" id="eBa-TA-Ft2"/>
                                             <constraint firstItem="lGu-UY-rpK" firstAttribute="top" secondItem="uoX-5v-crH" secondAttribute="bottom" id="feY-Kc-1q7"/>
+                                            <constraint firstItem="2Rw-uh-awg" firstAttribute="leading" secondItem="lGu-UY-rpK" secondAttribute="trailing" constant="8" id="gdA-Lv-O3W"/>
                                             <constraint firstItem="3jD-ib-d5I" firstAttribute="leading" secondItem="pFA-jL-zmI" secondAttribute="leading" id="lkX-AA-n3h"/>
                                             <constraint firstAttribute="bottom" secondItem="3jD-ib-d5I" secondAttribute="bottom" id="uU9-c3-8Ni"/>
                                             <constraint firstItem="lYi-oY-Q5A" firstAttribute="leading" secondItem="lGu-UY-rpK" secondAttribute="trailing" constant="8" id="usE-Am-coD"/>
                                             <constraint firstItem="lYi-oY-Q5A" firstAttribute="top" secondItem="pFA-jL-zmI" secondAttribute="top" constant="8" id="vuL-0q-2og"/>
                                         </constraints>
                                         <size key="customSize" width="225" height="100"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="2Em-xI-brz"/>
+                                                <exclude reference="usE-Am-coD"/>
+                                            </mask>
+                                        </variation>
                                         <connections>
                                             <outlet property="accessibleParkingImageView" destination="lYi-oY-Q5A" id="N1E-MX-bd2"/>
                                             <outlet property="buyButton" destination="3jD-ib-d5I" id="v5p-Mh-VNf"/>
+                                            <outlet property="noReentryImageView" destination="2Rw-uh-awg" id="8X6-jt-amC"/>
                                             <outlet property="spotInfoLabel" destination="lGu-UY-rpK" id="aP0-JJ-TvP"/>
                                             <outlet property="streetAddressLabel" destination="uoX-5v-crH" id="hnh-r2-r1H"/>
                                         </connections>
@@ -520,10 +538,10 @@
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="reservationInfoCell" rowHeight="60" id="XFy-AB-cG3" customClass="ReservationInfoTableViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="49.5" width="600" height="60"/>
+                                        <rect key="frame" x="0.0" y="50" width="600" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="XFy-AB-cG3" id="afe-AS-BCS">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EnR-Cz-Rin">
@@ -575,7 +593,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="personalInfoCell" rowHeight="50" id="yHh-3E-J0x" customClass="PersonalInfoTableViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="109.5" width="600" height="50"/>
+                                        <rect key="frame" x="0.0" y="110" width="600" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="yHh-3E-J0x" id="UXm-Fc-DTh">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
@@ -620,7 +638,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="paymentInfoCell" rowHeight="150" id="HL8-1Q-tXC" customClass="PaymentInfoTableViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="159.5" width="600" height="150"/>
+                                        <rect key="frame" x="0.0" y="160" width="600" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="HL8-1Q-tXC" id="7GP-Dw-1MG">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="149"/>
@@ -903,6 +921,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Noreentry" width="50" height="35"/>
         <image name="Rebook White" width="35" height="35"/>
         <image name="Success Icon" width="41" height="41"/>
         <image name="close-accessory" width="26" height="26"/>
